test/spec_vectors/load64/fail/module_16.wat
(module (memory i64 1) (func $load8_u_i32 (i32.load8_u (i64.const 0))))